Updated env settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = prusa_mm_control
+; default_envs = prusa_mm_control
 
 [env]
 framework = arduino
 platform = atmelavr
+platform_packages = framework-arduino-avr-prusa_rambo@1.0.3
+build_flags = -DHAS_SYSTEM_TIMER_0
 monitor_speed = 115200
 monitor_flags =
   --quiet
